--- a/Module 0/Game.ipynb
+++ b/Module 0/Game.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -50,9 +52,7 @@
       "69\n",
       "Угадываемое число меньше 69\n",
       "65\n",
-      "Угадываемое число больше 65\n",
-      "67\n",
-      "Вы угадали число 67 за 6 попыток.\n"
+      "Вы угадали число 65 за 5 попыток.\n"
      ]
     }
    ],
@@ -82,12 +82,12 @@
     "#### Задача:\n",
     "> Написать алгоритм, который должен угадывать число и делать это за как можно меньшее число попыток.\n",
     "\n",
-    "Для этого напишем функцию-тестировщик `score_game()`, которая будет многократно прогонять алгоритм и вычислять среднее число понадобившихся попыток, а также функцию `game_core()`, содержащую непосредственно сам алгоритм угадывания."
+    "Для этого напишем функцию-тестировщик `score_game()`, которая будет многократно прогонять алгоритм и подсчитывать среднее число понадобившихся попыток, а также функцию `game_core()`, содержащую непосредственно сам алгоритм угадывания."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
     "    текущего значения, в зависимости от того, больше искомое число или меньше.\n",
     "        \n",
     "    Функция принимает загаданное число и возвращает количество попыток, \n",
-    "    которое потребовалось алгоритму, чтобы его угадать.\n",
+    "    потребовавшееся алгоритму, чтобы его угадать.\n",
     "    '''\n",
     "    count = 1 # счетчик попыток\n",
     "    # Стартовое значение - середина всего диапазона:\n",
@@ -132,8 +132,8 @@
     "    # В цикле последовательно уменьшаем зону поиска, пока не угадаем число\n",
     "    while number != predict:\n",
     "        # Посчитаем значение половины от размера текущего диапазона поиска.\n",
-    "        # Оно понадобится для находения середины следующего отрезка.\n",
-    "        # Чтобы избежать застревания алгоритма, нельзя допускать, чтобы значение \n",
+    "        # Оно понадобится для нахождения середины следующего отрезка.\n",
+    "        # Чтобы избежать застревания цикла, нельзя допускать, чтобы значение \n",
     "        # опускалось ниже единицы. Для этого ограничим его с помощью np.clip:\n",
     "        half = np.clip(round(half / 2), 1, RANGE_MAX)\n",
     "        \n",
@@ -171,7 +171,6 @@
     }
    ],
    "source": [
-    "number = np.random.randint(1, RANGE_MAX + 1)\n",
     "game_core(number)"
    ]
   },
