update notebooks versions

--- a/Module 1. TripAdvisor Case/Module 1. TripAdvisor Case.ipynb
+++ b/Module 1. TripAdvisor Case/Module 1. TripAdvisor Case.ipynb
@@ -42,6 +42,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
     "from datetime import datetime as dt\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -58,14 +59,14 @@
     "df_train = pd.read_csv('main_task.csv')\n",
     "df_test = pd.read_csv('kaggle_task.csv')\n",
     "\n",
-    "df_test.drop('Name', axis = 1, inplace = True)\n",
+    "df_test.drop('Name', axis=1, inplace=True)\n",
     "\n",
     "# In order to process the features correctly let's combine Train and Test into one dataset:\n",
-    "df_train['sample'] = 1 # mark for Train\n",
-    "df_test['sample'] = 0 # mark for Test\n",
-    "df_test['Rating'] = 0 # target variable\n",
+    "df_train['sample'] = 1  # label for Train\n",
+    "df_test['sample'] = 0  # label for Test\n",
+    "df_test['Rating'] = 0  # target variable\n",
     "\n",
-    "df = df_test.append(df_train, sort = False).reset_index(drop = True)"
+    "df = df_test.append(df_train, sort = False).reset_index(drop=True)"
    ]
   },
   {
@@ -82,33 +83,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## __Version of the solution\n",
+    "# Version of the solution\n",
     "VERSION = 1.0\n",
     "\n",
-    "## __Fixate random seed constant and packets versions\n",
+    "# Fix random seed constant and packets versions\n",
     "RANDOM_SEED = 42\n",
     "!pip freeze > requirements.txt\n",
     "\n",
-    "## __Define rounding function\n",
+    "# Define helper rounding function\n",
     "round_rate = lambda x: round(x * 2) / 2\n",
     "vfunc = np.vectorize(round_rate)\n",
     "\n",
-    "## __Prepare datetime parser\n",
+    "# Prepare datetime parser\n",
     "datetimify = lambda s: dt.strptime(s, '%m/%d/%Y')\n",
     "def is_date(s):\n",
     "    try:\n",
-    "        dt.strptime(s, '%m/%d/%Y')\n",
+    "        datetimify(s)\n",
     "        return True\n",
     "    except ValueError:\n",
     "        return False\n",
     "\n",
-    "## __Capital cities list\n",
+    "# Capital cities list\n",
     "capitals = ['Paris', 'Stockholm', 'London', 'Berlin', 'Bratislava', \n",
     "            'Vienna', 'Rome', 'Madrid', 'Dublin', 'Brussels', 'Warsaw', \n",
     "            'Budapest', 'Copenhagen', 'Amsterdam', 'Lisbon', 'Prague', \n",
     "            'Oslo', 'Helsinki', 'Edinburgh', 'Ljubljana', 'Athens', 'Luxembourg']\n",
     "\n",
-    "## __Cities population dict\n",
+    "# Cities population dict\n",
     "cities_population = {\n",
     "    'Paris': 2140526, 'Stockholm': 965232, 'London': 8908081, 'Berlin': 3748148, \n",
     "    'Munich': 1456039, 'Oporto': 214349, 'Milan': 1385023,'Bratislava': 432864, \n",
@@ -130,7 +131,7 @@
     "\n",
     "words_attributes = {}\n",
     "\n",
-    "## __Cuisines Groups dict\n",
+    "# Cuisines Groups dict\n",
     "cuisines_groups = {\n",
     "    'European': ['European', 'Pizza'], \n",
     "    'French': ['French'], \n",
@@ -155,19 +156,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Convert 'Cuisine Style' column values to list\n",
+    "# Convert 'Cuisine Style' column values to list\n",
     "listify_cuisines = lambda s: s[1:-1].replace(\"'\", \"\").split(\", \")\\\n",
     "                             if not pd.isnull(s) else ['null']\n",
     "df['Cuisine Style'] = df['Cuisine Style'].apply(listify_cuisines)\n",
     "\n",
-    "## Make \"all cuisine types\" list\n",
+    "# Make \"all cuisine types\" list\n",
     "cuisines = []\n",
     "for s in df['Cuisine Style']:\n",
     "    for c in s:\n",
     "        if not c in cuisines:\n",
     "            cuisines.append(c)\n",
     "\n",
-    "## Make dict with cuisines prevalence among restaurants\n",
+    "# Make dict with cuisines prevalence among restaurants\n",
     "cuisines_rests = {}\n",
     "for cu in cuisines:\n",
     "    cuisines_rests.update({cu : 0})\n",
@@ -182,13 +183,14 @@
     "for cu in cuisines_rests.items():\n",
     "    cuisines_rests[cu[0]] = round(cu[1] / 1000)\n",
     "    \n",
-    "## Split \"Reviews\" column into \"Only Reviews\" and \"Only Dates\" columns\n",
+    "# Split \"Reviews\" column into \"Only Reviews\" and \"Only Dates\" columns\n",
     "listify_reviews = lambda s: s[1:-1].replace(\"'\", \"\").split(\", \")\\\n",
     "                            if not pd.isnull(s) else []\n",
     "clear_strings = lambda l: [s.strip('[]') for s in l]\n",
     "df['Reviews'] = df['Reviews'].apply(listify_reviews).apply(clear_strings)\n",
     "\n",
-    "def get_review_dates_strs(l, get_dates = True):\n",
+    "# Define helper func for preprocessing \"Reviews\" column\n",
+    "def get_review_dates_strs(l, get_dates=True):\n",
     "    dates = []\n",
     "    reviews = []\n",
     "    for s in l:\n",
@@ -198,8 +200,8 @@
     "            reviews.append(s)\n",
     "    return dates if get_dates else reviews\n",
     "\n",
-    "df.insert(7, 'Only Reviews', df['Reviews'].apply(lambda x: get_review_dates_strs(x, get_dates = False)))\n",
-    "df.insert(8, 'Only Dates', df['Reviews'].apply(lambda x: get_review_dates_strs(x, get_dates = True)))"
+    "df.insert(7, 'Only Reviews', df['Reviews'].apply(lambda x: get_review_dates_strs(x, get_dates=False)))\n",
+    "df.insert(8, 'Only Dates', df['Reviews'].apply(lambda x: get_review_dates_strs(x, get_dates=True)))"
    ]
   },
   {
@@ -281,7 +283,7 @@
    ],
    "source": [
     "# Add dummy variables for each city\n",
-    "df = pd.get_dummies(df, columns = ['City'], prefix = \"[d] [City]\", prefix_sep = \" \", dummy_na = True)\n",
+    "df = pd.get_dummies(df, columns=['City'], prefix=\"[d] [City]\", prefix_sep=\" \", dummy_na=True)\n",
     "\n",
     "# Add dummy variables for cuisines groups\n",
     "for col in cuisines_groups.keys():\n",
@@ -482,24 +484,24 @@
    ],
    "source": [
     "# Generate train data back\n",
-    "train_data = df.query('sample == 1').drop(['sample'], axis = 1)\n",
+    "train_data = df.query('sample == 1').drop(['sample'], axis=1)\n",
     "\n",
     "# Х - data, \n",
     "# у - target value ('Rating')\n",
-    "X = train_data.drop(['Rating'], axis = 1)\n",
+    "X = train_data.drop(['Rating'], axis=1)\n",
     "y = train_data['Rating']\n",
     "\n",
     "# Split data to Train and Test\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
-    "                                                    test_size = 0.2, \n",
-    "                                                    random_state = RANDOM_SEED)\n",
+    "                                                    test_size=0.2, \n",
+    "                                                    random_state=RANDOM_SEED)\n",
     "\n",
     "\n",
     "# Train and fit a Random Forest Regressor model on the Train data\n",
-    "model = RandomForestRegressor(n_estimators = 100, \n",
-    "                              verbose = 1, \n",
-    "                              n_jobs = -1, \n",
-    "                              random_state = RANDOM_SEED)\n",
+    "model = RandomForestRegressor(n_estimators=100, \n",
+    "                              verbose=1, \n",
+    "                              n_jobs=-1, \n",
+    "                              random_state=RANDOM_SEED)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "# Predict ratings and round them\n",
@@ -637,8 +639,8 @@
    "source": [
     "model.fit(X, y)\n",
     "\n",
-    "test_data = df.query('sample == 0').drop(['sample'], axis = 1)\n",
-    "test_data = test_data.drop(['Rating'], axis = 1)\n",
+    "test_data = df.query('sample == 0').drop(['sample'], axis=1)\n",
+    "test_data = test_data.drop(['Rating'], axis=1)\n",
     "y_pred_submission = vfunc(model.predict(test_data))\n",
     "\n",
     "submission = pd.read_csv('sample_submission.csv')\n",
@@ -677,8 +679,8 @@
     "\n",
     "plt.rcParams.update({'font.size': 22, 'xtick.color': 'black', 'ytick.color': 'black'})\n",
     "plt.rcParams['figure.figsize'] = (20, 10)\n",
-    "feat_importances = pd.Series(model.feature_importances_, index = X.columns)\n",
-    "feat_importances.nlargest(16).plot(kind = 'barh');"
+    "feat_importances = pd.Series(model.feature_importances_, index=X.columns)\n",
+    "feat_importances.nlargest(16).plot(kind='barh');"
    ]
   }
  ],
@@ -698,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
@@ -717,6 +719,35 @@
    },
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
