--- a/Module 2. Spam Classifier/Module 2. Spam Classifier [Naive Bayes].ipynb
+++ b/Module 2. Spam Classifier/Module 2. Spam Classifier [Naive Bayes].ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importing libraries"
+    "## Import libraries"
    ]
   },
   {
@@ -33,13 +33,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Config:\n",
-    "### Setting consts, variables, utility function"
+    "## Config\n",
+    "Set consts, variables, utility function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
@@ -51,17 +51,17 @@
     "pA = 0  # probability of encountering SPAM\n",
     "pNotA = 0  # probability of encountering NOT SPAM\n",
     "\n",
-    "## Consts\n",
+    "# Consts\n",
     "SPAM = 1\n",
     "NOT_SPAM = 0\n",
     "WORD_MIN_LENGTH = 3  # minimum separate word length to consider it valuable for model training\n",
     "\n",
-    "## Vars\n",
+    "# Vars\n",
     "trainPositive, trainNegative = {}, {}  # dictionaries for storing quantities of spam / non-spam words.\n",
     "unique_words = 0  # number of unique words in general\n",
     "totals = [0, 0]  # total amounts of non-spam [0] / spam [1] words\n",
     "\n",
-    "## Helper func to easily retrieve required dictionary by label\n",
+    "# Helper func to easily retrieve required dictionary by label\n",
     "get_dict = lambda label: trainPositive if label == SPAM else trainNegative"
    ]
   },
@@ -70,14 +70,14 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Making model train functions ensemble"
+    "## Make model train functions ensemble"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Main model training func:"
+    "Main model training func:"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### In order to train the model correctly, we need to calculate words encountering frequencies:"
+    "In order to train the model correctly, we need to calculate words encountering frequencies:"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The following functions will help us cleanse and prepare text data for training / classifying:"
+    "The following functions will help us cleanse and prepare text data for training / classifying:"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Finally, let's implement the Naive Bayes Classifier formulas:"
+    "Finally, let's implement the Naive Bayes Classifier formulas:"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ..as well as the main func to classify email as SPAM / NOT SPAM:"
+    "..as well as the main func to classify email as SPAM / NOT SPAM:"
    ]
   },
   {
@@ -299,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
@@ -313,6 +313,35 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": true
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
