--- a/Project 2. Spam Classifier/Module 2. Spam Classifier [Naive Bayes].ipynb
+++ b/Project 2. Spam Classifier/Module 2. Spam Classifier [Naive Bayes].ipynb
@@ -46,7 +46,7 @@
    },
    "outputs": [],
    "source": [
-    "data_url = '../input/spam-or-not-spam-dataset/spam_or_not_spam.csv'\n",
+    "data_path = 'Classifier/spam_or_not_spam.csv'\n",
     "\n",
     "pA = 0  # probability of encountering SPAM\n",
     "pNotA = 0  # probability of encountering NOT SPAM\n",
@@ -208,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(data_url)\n",
+    "df = pd.read_csv(data_path)\n",
     "df = df.dropna()\n",
     "\n",
     "train(df)"
